# proto-gen

./: Cargo.toml  README.md  hello.proto  todo
examples/: gen-cmd.sh  hello.proto
examples/cs-server/src/: .gitignore  Program.cs
examples/rust-server/: Cargo.toml
examples/rust-server/src/: .gitignore  main.rs
gen-ex/cs-server/src/: BackendService.cs  GameManager.cs  Program.cs
gen-ex/src/: frontend.rs  main.rs
src/: codegen.rs  codegen_csharp.rs  codegen_rust.rs  intern.rs  main.rs  parse_tree.rs  parser.rs  serializable_tree.rs
templates/: rust-gen-builtin.rs  rust-gen-enum.rs.tera  rust-gen-message.rs.tera  rust-gen-service.rs.tera
templates/csharp/: gen-builtin.cs  gen-enum.cs.tera  gen-message.cs.tera  gen-service.cs.tera
