[package]
name = "protogen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
convert_case = "0.6.0"
indexmap = "1.9.3"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.96"
serde_repr = "0.1.12"
tera = "1.19.0"
walkdir = "2.3.3"
